# fotowall

./: .clang-format  .gitignore  .pre-commit-config.yaml  Aide.ui  BackgroundChooser.cpp  BackgroundChooser.h  BackgroundChooser.ui  ButtonItem.cpp  ButtonItem.h  ButtonsDialog.cpp  ButtonsDialog.h  CMakeLists.txt  CPixmap.cpp  CPixmap.h  ColorPickerItem.cpp  ColorPickerItem.h  ColorPickerItem.hpp  CropingDialog.cpp  CropingDialog.h  CropingDialog.ui  CropingWidget.cpp  CropingWidget.h  CroppingDialog.cpp  CroppingDialog.h  CroppingDialog.ui  CroppingWidget.cpp  CroppingWidget.h  Desk.cpp  Desk.h  Error.hpp  ExactSizeDialog.cpp  ExactSizeDialog.ui  Export.cpp  Export.h  ExportDialog.ui  ExportWizard.cpp  ExportWizard.h  ExportWizard.ui  FWFoto.cpp  FWFoto.h  (+82 more)
App/: App.cpp  App.h  App.pri  CanvasAppliance.cpp  CanvasAppliance.h  CanvasAppliance.ui  ExactSizeDialog.cpp  ExactSizeDialog.h  ExactSizeDialog.ui  ExportWizard.cpp  ExportWizard.h  ExportWizard.ui  FotowallFile.cpp  FotowallFile.h  Hardware3DTest.cpp  Hardware3DTest.h  HelpAppliance.cpp  HelpAppliance.h  HelpAppliance.ui  HelpItem.cpp  HelpItem.h  HomeAppliance.cpp  HomeAppliance.h  HomeScene.cpp  HomeScene.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowMobile.cpp  MainWindowMobile.h  MainWindow_s60.cpp  MainWindow_s60.h  MainWindow_s60.ui  ModeInfo.cpp  ModeInfo.h  OnlineServices.cpp  OnlineServices.h  PictureSearchWidget.cpp  PictureSearchWidget.h  PictureSearchWidget.ui  (+23 more)
Canvas/: AbstractConfig.cpp  AbstractConfig.h  AbstractConfig.ui  AbstractContent.cpp  AbstractContent.h  AbstractDisposeable.h  AbstractScene.cpp  AbstractScene.h  BezierCubicItem.cpp  BezierCubicItem.h  ButtonItem.cpp  ButtonItem.h  Canvas.cpp  Canvas.h  Canvas.pri  CanvasModeInfo.cpp  CanvasModeInfo.h  CanvasViewContent.cpp  CanvasViewContent.h  ContentProperties.cpp  ContentProperties.h  ContentProperties.ui  CornerItem.cpp  CornerItem.h  HelpItem.cpp  HelpItem.h  HighlightItem.cpp  MirrorItem.cpp  MirrorItem.h  PictureConfig.cpp  PictureConfig.h  PictureConfig.ui  PictureContent.cpp  PictureContent.h  PictureProperties.cpp  PictureProperties.h  PictureProperties.ui  PictureSearchItem.cpp  PictureSearchItem.h  PictureSearchItem.ui  (+20 more)
Desk/: AbstractConfig.cpp  AbstractConfig.h  AbstractContent.cpp  AbstractContent.h  BezierCubicItem.h  ButtonItem.cpp  ColorPickerItem.h  CornerItem.cpp  Desk.cpp  Desk.h  Desk.pri  DeskViewContent.cpp  DeskViewContent.h  HelpItem.cpp  HighlightItem.cpp  HighlightItem.h  PictureConfig.cpp  PictureConfig.h  PictureContent.cpp  PictureContent.h  PropertyEditors.cpp  SelectionProperties.cpp  TextContent.cpp  TextProperties.ui  WebContentSelectorItem.cpp  WebcamContent.cpp
Frames/: EmptyFrame.cpp  EmptyFrame.h  Frame.cpp  Frame.h  FrameFactory.cpp  FrameFactory.h  Frames.pri  HeartFrame.cpp  HeartFrame.h  PlasmaFrame.cpp  PlasmaFrame.h  StandardFrame.cpp  StandardFrame.h
MainWindow/: MainWindow.cpp  MainWindow.pri  MainWindow.ui  ModeInfo.h  VersionCheckDialog.h  XmlRead.cpp  XmlRead.h  XmlSave.cpp  XmlSave.h
Shared/: AbstractAppliance.cpp  AbstractAppliance.h  AbstractCommand.h  AbstractDisposeable.cpp  AbstractDisposeable.h  AbstractPictureService.cpp  AbstractPictureService.h  AbstractResourceProvider.h  AbstractScene.cpp  AbstractScene.h  ApplianceContainer.cpp  ApplianceContainer.h  ApplianceManager.cpp  ApplianceManager.h  BlinkingToolButton.cpp  BlinkingToolButton.h  BreadCrumbBar.cpp  BreadCrumbBar.h  BrowserItem.cpp  BrowserItem.h  ButtonsDialog.cpp  ButtonsDialog.h  CPixmap.cpp  CPixmap.h  ColorPickerItem.cpp  ColorPickerItem.h  CommandStack.cpp  CommandStack.h  Commands.h  Compat.h  CroppingDialog.cpp  CroppingDialog.h  CroppingDialog.ui  CroppingWidget.cpp  CroppingWidget.h  FlickrInterface.cpp  FlickrPictureService.cpp  FlickrPictureService.h  GlowEffectDialog.cpp  GlowEffectDialog.h  (+24 more)
Tools/: ButtonsDialog.h  CPixmap.cpp  CroppingDialog.ui  FlickrInterface.h  GlowEffectDialog.ui  Tools.pri
WordCloud/: WordCloud.cpp  WordCloud.h  WordCloud.pri  WordDefs.h  WordItem.cpp  WordItem.h  WordScanner.cpp  WordScanner.h
Wordcloud/: Bits.h  Cloud.cpp  Cloud.h  Scanner.cpp  Scanner.h  WordItem.cpp  WordItem.h  Wordcloud.pri
data/: fotowall.desktop  help.html  introduction-French.html  introduction-en.html  introduction-en.richtext  introduction-fr.html  introduction-fr.richtext
example-layouts/: example-leaves.lay  example-snowboard.lay  test.lay
frames/: EmptyFrame.cpp  EmptyFrame.h  Frame.cpp  Frame.h  FrameFactory.cpp  FrameFactory.h  HeartFrame.cpp  HeartFrame.h  PlasmaFrame.cpp  PlasmaFrame.h  StandardFrame.cpp  StandardFrame.h  frames.pri
items/: AbstractConfig.cpp  AbstractConfig.h  AbstractConfig.ui  AbstractContent.cpp  AbstractContent.h  AbstractContentItem.cpp  AbstractContentItem.h  AbstractDisposeable.cpp  AbstractDisposeable.h  AbstractProperties.cpp  AbstractProperties.h  AbstractProperties.ui  BezierCubicItem.cpp  BezierCubicItem.h  BezierTextContent.cpp  BezierTextContent.h  BezierTextDialog.cpp  BezierTextDialog.h  BezierTextDialog.ui  BezierTextProperties.cpp  BezierTextProperties.h  BrowserItem.cpp  BrowserItem.h  ButtonItem.cpp  ButtonItem.h  CPixmap.cpp  CPixmap.h  ColorPickerItem.cpp  ColorPickerItem.h  CornerItem.cpp  CornerItem.h  HelpItem.cpp  HelpItem.h  HighlightItem.cpp  HighlightItem.h  MirrorItem.cpp  MirrorItem.h  PictureConfig.cpp  PictureConfig.h  PictureContent.cpp  (+34 more)
open-collab-services/: API_KEY  OcsConnector.cpp  OcsConnector.h  OcsTypes.h  OcsXmlReader.cpp  OcsXmlReader.h  gen-cppservices.sh  open-collab-services.pri
tools/: CroppingDialog.h  CroppingDialog.ui  GlowEffectDialog.h  GlowEffectDialog.ui  GlowEffectWidget.cpp  GlowEffectWidget.h  VideoProvider.cpp  VideoProvider.h
translations/: fotowall_de.qm  fotowall_de.ts  fotowall_de.ts.BACKUP.4572.ts  fotowall_de.ts.LOCAL.4572.ts  fotowall_de.ts.REMOTE.4572.ts  fotowall_el.qm  fotowall_el.ts  fotowall_en.qm  fotowall_en.ts  fotowall_es.qm  fotowall_es.ts  fotowall_fr.qm  fotowall_fr.ts  fotowall_it.qm  fotowall_it.ts  fotowall_pl.qm  fotowall_pl.ts  fotowall_pt_BR.qm  fotowall_pt_BR.ts  (+10 more)
(+23 files in other folders)
